--- a/myteam-ui/src/app/about/about.component.html
+++ b/myteam-ui/src/app/about/about.component.html
@@ -1,11 +1,16 @@
 <div class="container">
   <mat-card>
     <h1>
-      <mat-card-title translate>APP_NAME</mat-card-title>
+      <mat-card-title>My Team</mat-card-title>
     </h1>
     <mat-card-content>
-      <mat-icon>code</mat-icon>
-      <span translate>Version</span> {{ version }}
+      <p>My Team is developed by Stephen Dillon to better manage our large team. 
+        If you have any feedback please reach out at <a href="mailto:stephenmarkdillon@gmail.com" target="_blank">stephenmarkdillon@gmail.com</a>
+      </p>
+
+      <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="dark" data-type="VERTICAL" data-vanity="stephen-dillon" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://www.linkedin.com/in/stephen-dillon?trk=profile-badge"></a></div>
+
     </mat-card-content>
   </mat-card>
+
 </div>
