--- a/myteam-ui/src/app/auth/login.component.html
+++ b/myteam-ui/src/app/auth/login.component.html
@@ -1,6 +1,6 @@
 <div fxFill fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="1.5rem" class="mat-typography">
   <div>
-    <h1 fxLayoutAlign="center" translate>APP_NAME</h1>
+    <h1 fxLayoutAlign="center">My Team</h1>
     <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="2rem">
       <h4 class="version">v{{ version }}</h4>
     </div>
