--- a/myteam-ui/src/app/shell/header/header.component.html
+++ b/myteam-ui/src/app/shell/header/header.component.html
@@ -19,13 +19,18 @@
   <button mat-icon-button [matMenuTriggerFor]="userMenu">
     <mat-icon>person</mat-icon>
   </button>
+  
   <mat-menu #userMenu="matMenu">
-    <mat-list>
+    <mat-list *ngIf="loggedIn">
       <mat-list-item>
         <span translate>Logged in as</span>&nbsp;<b>{{ username }}</b>
       </mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
-    <button mat-menu-item (click)="logout()" translate>Logout</button>
+    <button mat-menu-item (click)="logout()" *ngIf="loggedIn">Logout</button>
+
+    <button mat-menu-item (click)="login()" *ngIf="!loggedIn">Login</button>
+
+    
   </mat-menu>
 </mat-toolbar>
